Euro Issue Fixed 25-01-2020

--- a/EuroMobileApp/EuroMobileApp/Controls/FileLayout.xaml
+++ b/EuroMobileApp/EuroMobileApp/Controls/FileLayout.xaml
@@ -77,7 +77,7 @@
                                         Grid.Column="0"
                                         Aspect="Fill"
                                         HeightRequest="60"
-                                        Source="{Binding FileImage}"
+                                        Source="{Binding FileURL}"
                                         WidthRequest="60" />
                                 </Frame>
 
