--- a/EuroMobileApp/EuroMobileApp/Views/WorkOrderSearchFilterPage.xaml
+++ b/EuroMobileApp/EuroMobileApp/Views/WorkOrderSearchFilterPage.xaml
@@ -6,6 +6,7 @@
     xmlns:Icons="clr-namespace:FontAwesome"
     xmlns:Yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
     xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
+    xmlns:behaviors="http://xamarin.com/schemas/2020/toolkit"
     xmlns:control="clr-namespace:EuroMobileApp.Controls"
     xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
     xmlns:prism="http://prismlibrary.com"
@@ -155,9 +156,13 @@
                             Grid.Column="0"
                             FontFamily="{StaticResource RobotoCondensedRegular}"
                             FontSize="16"
-                            Keyboard="Text"
+                            Keyboard="Numeric"
                             Text="{Binding request.PhoneNumber}"
-                            VerticalOptions="Center" />
+                            VerticalOptions="Center">
+                            <control:BorderlessEntry.Behaviors>
+                                <behaviors:MaskedBehavior Mask="(XXX) XXX-XXXX" />
+                            </control:BorderlessEntry.Behaviors>
+                        </control:BorderlessEntry>
                         <BoxView
                             Margin="0"
                             HeightRequest="1"
