--- a/EuroMobileApp/EuroMobileApp/Views/OrderListPage.xaml
+++ b/EuroMobileApp/EuroMobileApp/Views/OrderListPage.xaml
@@ -120,7 +120,7 @@
 
                             <CollectionView
                                 x:Name="UserOrders"
-                                EmptyView="{trans:Translate NoUserOrder}"
+                                EmptyView="{Binding EmptyStateTitle}"
                                 ItemsSource="{Binding ListItems}"
                                 SelectionMode="None">
 
